--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,7 +1,11 @@
 ---
 - name: prerequisities
   apt:
-    name: apt-transport-https
+    name:
+      - apt-transport-https
+      - gpg
+    update_cache: yes
+    cache_valid_time: 300
 
 - name: install Spotify GPG key
   apt_key:
