--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 ansible>=3.2.0,<=3.4
-ansible-lint==5.0.8
-docker==5.0.0
-flake8==3.9.2
-molecule==3.3.0
-molecule-docker==0.2.4
+ansible-lint~=5.0.8
+docker~=5.0.0
+flake8~=3.9.0
+molecule[ansible,docker]~=3.3.0
+#molecule-docker~=0.2.4
+yamllint~=1.26.0
+pytest-testinfra~=6.3.0
