--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,3 +11,13 @@ repos:
       - id: end-of-file-fixer
       - id: fix-encoding-pragma
       - id: requirements-txt-fixer
+  - repo: https://github.com/ansible-community/ansible-lint.git
+    rev: v5.0.8
+    hooks:
+      - id: ansible-lint
+        files: \.(yaml|yml)$
+  - repo: https://github.com/pycqa/flake8
+    rev: 3.9.2
+    hooks:
+      - id: flake8
+        exclude: ^.venv
