--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 ---
 galaxy_info:
-  role_name: tgagor.spotify
+  role_name: tgagor-spotify
   author: Tomasz Gągor
   description: installs Spotify on Ubuntu linux
   # company: your company (optional)
@@ -16,7 +16,7 @@ galaxy_info:
   # - GPLv3
   # - Apache
   # - CC-BY
-  license: license (GPLv2, CC-BY, etc)
+  license: GPLv3
 
   min_ansible_version: 1.2
 
@@ -34,17 +34,11 @@ galaxy_info:
   #
   # platforms is a list of platforms, and each platform has a name and a list of versions.
   #
-  # platforms:
-  # - name: Fedora
-  #   versions:
-  #   - all
-  #   - 25
-  # - name: SomePlatform
-  #   versions:
-  #   - all
-  #   - 1.0
-  #   - 7
-  #   - 99.99
+  platforms:
+  - name: Ubuntu
+    versions:
+    - 20.04
+    - 20.10
 
   galaxy_tags: []
     # List tags for your role here, one per line. A tag is a keyword that describes
