--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ ansible>=3.2.0,<=3.4
 ansible-lint~=5.0.8
 flake8~=3.9.0
 molecule[docker]~=3.3.0
+pre-commit~=2.12.0
 pytest-testinfra~=6.3.0
 yamllint~=1.26.0
