--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -2,6 +2,6 @@
 - name: Converge
   hosts: all
   tasks:
-    - name: "Include ansible-role-spotify"
+    - name: Include spotify
       include_role:
-        name: "ansible-role-spotify"
+        name: tgagor-spotify
