Fix test, add Mint support

--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -5,6 +5,6 @@
     - name: install Ansible dependencies
       apt:
         name:
-          - python-apt
+          - python3-apt
           - gpg
         update_cache: yes
