--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -3,9 +3,9 @@ dependency:
   name: galaxy
 driver:
   name: docker
-lint: |
-  set -e
-  pre-commit run -a
+# lint: |
+#   set -e
+#   pre-commit run -a
 platforms:
   - name: ubuntu-20.04
     image: ubuntu:20.04
