--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -2,6 +2,6 @@
 - name: Converge
   hosts: all
   tasks:
-    - name: Include spotify
+    - name: Include tgagor.spotify
       include_role:
-        name: tgagor-spotify
+        name: tgagor.spotify
