--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -7,14 +7,18 @@ driver:
 #   set -e
 #   pre-commit run -a
 platforms:
+  - name: ubuntu-18.04
+    image: ubuntu:18.04
   - name: ubuntu-20.04
     image: ubuntu:20.04
   - name: ubuntu-20.10
     image: ubuntu:20.10
-  # - name: mint-20
-  #   image: linuxmintd/mint20-amd64
-  # - name: mint-20.1
-  #   image: linuxmintd/mint20.1-amd64
+  - name: mint-19.3
+    image: linuxmintd/mint19.3-amd64
+  - name: mint-20
+    image: linuxmintd/mint20-amd64
+  - name: mint-20.1
+    image: linuxmintd/mint20.1-amd64
 provisioner:
   name: ansible
 scenario:
