--- a/meta/main.yml
+++ b/meta/main.yml
@@ -15,9 +15,9 @@ galaxy_info:
   platforms:
   - name: Ubuntu
     versions:
-      - bionic
-      - focal
-      - hirsute
+      - bionic  # 18.04
+      - focal   # 20.04
+      - hirsute # 20.10
   - name: Mint
     versions:
       - '19.3'
