--- a/meta/main.yml
+++ b/meta/main.yml
@@ -17,12 +17,13 @@ galaxy_info:
     versions:
       - bionic  # 18.04
       - focal   # 20.04
-      - hirsute # 20.10
-  - name: Mint
+      - groovy  # 20.10
+      # - hirsute # 21.04
+  - name: Debian
     versions:
-      - '19.3'
-      - '20'
-      - '20.1'
+      - stretch   # 9
+      - buster    # 10
+      # - bullseye  # 11
 
   galaxy_tags:
     - tgagor
