--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -8,17 +8,25 @@ driver:
 #   pre-commit run -a
 platforms:
   - name: ubuntu-18.04
-    image: ubuntu:18.04
+    image: ubuntu:bionic
   - name: ubuntu-20.04
-    image: ubuntu:20.04
+    image: ubuntu:focal
   - name: ubuntu-20.10
-    image: ubuntu:20.10
+    image: ubuntu:groovy
+  - name: ubuntu-21.04
+    image: ubuntu:hirsute
   - name: mint-19.3
     image: linuxmintd/mint19.3-amd64
   - name: mint-20
     image: linuxmintd/mint20-amd64
   - name: mint-20.1
     image: linuxmintd/mint20.1-amd64
+  - name: debian-stretch
+    image: debian:stretch
+  - name: debian-buster
+    image: debian:buster
+  - name: debian-bullseye
+    image: debian:bullseye
 provisioner:
   name: ansible
 scenario:
