--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -1,5 +1,5 @@
 ---
-name: Molecule Test
+name: test and release
 
 on:
   push:
@@ -14,18 +14,12 @@ on:
 jobs:
   build:
     runs-on: ubuntu-20.04
-    # strategy:
-    #   max-parallel: 4
-    #   matrix:
-    #     python-version: [3.8, 3.9]
     steps:
       - uses: actions/checkout@v2
 
-      # - name: Set up Python ${{ matrix.python-version }}
       - name: Set up Python 3.8
         uses: actions/setup-python@v2
         with:
-          # python-version: ${{ matrix.python-version }}
           python-version: 3.8
 
       - name: Install dependencies
