--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -3,22 +3,17 @@ dependency:
   name: galaxy
 driver:
   name: docker
-# lint: |
-#   set -e
-#   pre-commit run -a
 platforms:
   - name: ubuntu-18.04
-    image: ubuntu:bionic
+    image: ubuntu:18.04
   - name: ubuntu-20.04
-    image: ubuntu:focal
+    image: ubuntu:20.04
   - name: ubuntu-20.10
-    image: ubuntu:groovy
+    image: ubuntu:20.10
   - name: ubuntu-21.04
-    image: ubuntu:hirsute
+    image: ubuntu:21.04
   - name: mint-19.3
     image: linuxmintd/mint19.3-amd64
-  - name: mint-20
-    image: linuxmintd/mint20-amd64
   - name: mint-20.1
     image: linuxmintd/mint20.1-amd64
   - name: debian-stretch
