--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,7 +3,7 @@ galaxy_info:
   role_name: spotify
   namespace: tgagor
   author: Tomasz G.
-  description: installs Spotify client on Ubuntu linux
+  description: installs Spotify client on Ubuntu/Debian Linux
   license: GPLv3
 
   min_ansible_version: 1.2
